# lesson_zoom_kirirll_1

./: pyproject.toml
Class_work/: class_work.py
tests/: conftest.py  test_class.py
