[tool.poetry]
name = "lesson-zoom-kirirll-1"
version = "0.1.0"
description = ""
authors = ["DSulzhits <dsulzhits@gmail.com>"]
readme = "README.md"
packages = [{include = "lesson_zoom_kirirll_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
